# sample-document-processing-with-amazon-bedrock-data-automation

./: .gitignore  README.md
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/: .bedrock_agentcore.yaml  .dockerignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_RESTRUCTURE_SUGGESTION.md  README.md  REQUIREMENTS.md  demo-prep.sh  pyproject.toml  terraform-improvments.md
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/documents/: sample-document.txt
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/e9e4caa2-ba81-4f61-8b41-0deda9225b7a/: job_metadata.json
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/e9e4caa2-ba81-4f61-8b41-0deda9225b7a/0/custom_output/: Untitled-1.json
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/infrastructure/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  versions.tf
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/infrastructure/terraform/agentcore_lambda/: main.py  requirements.txt
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/infrastructure/terraform/crud_lambda/: main.py  (+2 more)
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/scripts/: setup.py  test-integration.sh  utils.py  validate-terraform.sh
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/src/: .bedrock_agentcore.yaml  Dockerfile  bda_agent_assistant.py  data_extraction_agent.py  dynamo_agent_assistant.py  kb_retrieval_assistant.py  main.py  requirements.txt  storage_agent.py  utils.py  validation_agent.py
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/src/mortgage_processor/: main.py
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/src/streamlit/: app.py  aws_utils.py  config.py  data_utils.py  requirements.txt
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
20-Industry-Use-Cases/23-Mortgage-Application-Processing-Using-Multi-Agent-Collab-Strand-Agents/terraform/lambda/: document_processor.py  main.py
(+61 files in other folders)
