[project]
name = "mortgage-processor"
version = "1.0.0"
description = "Mortgage processing application"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.5",
    "pydantic>=2.11.7",
    "boto3>=1.39.14",
    "httpx>=0.27.0",
    "strands-agents",
    "strands-agents[otel]",
    "strands-agents-tools",
    "bedrock-agentcore>=0.1.2",
    "aws_lambda_powertools>=3.0.0",
    "aws-opentelemetry-distro>=0.12.0",
    "bedrock-agentcore-starter-toolkit>=0.1.1",
    "uv>=0.8.3",
    "requests>=2.32.0",
    "pyyaml>=6.0.2",
    "pynamodb>=6.0.0",
    "smart_open>=7.0.0",
    "streamlit>=1.49.1",
    "pandas>=2.3.2",
    "streamlit-antd-components>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"